[tool.poetry]
name = "test-driven-development"
version = "0.1.0"
description = ""
authors = ["jared.rimmer"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.1.3"
Django = "< 1.12"
gunicorn = "20.1.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
